--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
     <div class="container">
         <h1>Catálogo de Produtos</h1>
-        <div id="estoque"></div>
+        <div id="estoque" class="produtos"></div>
 
         <h2>Últimos Pedidos</h2>
-        <div id="pedidos"></div>
+        <div id="pedidos" class="pedidos"></div>
 
         <h2>Pagamento</h2>
         <div class="qrcode-container">
@@ -23,6 +22,5 @@
             <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
         </div>
     </div>
-
 </body>
 </html>
