--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="estoque" class="produtos"></div>
 
         <h2>Últimos Pedidos</h2>
-        <div id="pedidos" class="pedidos"></div>
+        <div id="pedidos"></div>
 
         <h2>Pagamento</h2>
         <div class="qrcode-container">
