--- a/index.html
+++ b/index.html
@@ -1,25 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vendas da Faculdade</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vendas da Faculdade</title>
+  <!-- Arquivo de estilos -->
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Arquivo de script -->
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Catálogo de Produtos</h1>
-        <div id="estoque" class="produtos"></div>
 
-        <h2>Pagamento</h2>
-        <p id="total-compra">Total: R$ 0.00</p>
+  <!-- Cabeçalho com menu de navegação -->
+  <header>
+    <h1>Vendas da Faculdade</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Produtos</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <div class="qrcode-container">
-            <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX">
-        </div>
-        <p id="chave-pix">SUA-CHAVE-PIX-ALEATÓRIA</p>
-        <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
+  <!-- Container principal -->
+  <div class="container">
+    <!-- Título do Catálogo de Produtos -->
+    <h2>Catálogo de Produtos</h2>
+
+    <!-- Lista de Produtos -->
+    <!-- Exemplo de 4 produtos estáticos -->
+    <div class="produto-item">
+      <img src="pacoquinha.png" alt="pacoquinha" />
+      <div class="info">
+        <h3>pacoquinha</h3>
+        <p>Quantidade: 40</p>
+      </div>
+      <div class="preco">
+        <span>R$ 1.50</span>
+        <button class="adicionar">Adicionar</button>
+      </div>
     </div>
+
+    <div class="produto-item">
+      <img src="freegells.png" alt="freegells" />
+      <div class="info">
+        <h3>freegells</h3>
+        <p>Quantidade: 20</p>
+      </div>
+      <div class="preco">
+        <span>R$ 2.00</span>
+        <button class="adicionar">Adicionar</button>
+      </div>
+    </div>
+
+    <div class="produto-item">
+      <img src="salgadinho.png" alt="salgadinho torcida" />
+      <div class="info">
+        <h3>salgadinho torcida</h3>
+        <p>Quantidade: 8</p>
+      </div>
+      <div class="preco">
+        <span>R$ 4.50</span>
+        <button class="adicionar">Adicionar</button>
+      </div>
+    </div>
+
+    <div class="produto-item">
+      <img src="biscoitos.png" alt="biscoitos" />
+      <div class="info">
+        <h3>biscoitos</h3>
+        <p>Quantidade: 15</p>
+      </div>
+      <div class="preco">
+        <span>R$ 3.00</span>
+        <button class="adicionar">Adicionar</button>
+      </div>
+    </div>
+
+    <!-- Seção de Pagamento -->
+    <h2>Pagamento</h2>
+    <p id="total-compra">Total: R$ 0.00</p>
+
+    <!-- QR Code e Chave PIX -->
+    <div class="qrcode-container">
+      <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
+    </div>
+    <p id="chave-pix">SUA-CHAVE-PIX-ALEATÓRIA</p>
+    <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
+  </div>
+  
 </body>
 </html>
