--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vendas da Faculdade</title>
-  <!-- Arquivo de estilos -->
+  <!-- Arquivo de estilos (styles.css) -->
   <link rel="stylesheet" href="styles.css" />
-  <!-- Arquivo de script -->
+  <!-- Arquivo de script (script.js) -->
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -29,9 +29,9 @@
     <h2>Catálogo de Produtos</h2>
 
     <!-- Lista de Produtos -->
-    <!-- Exemplo de 4 produtos estáticos -->
+    <!-- Ajuste o "src" das imagens se o nome ou a pasta for diferente -->
     <div class="produto-item">
-      <img src="pacoquinha.png" alt="pacoquinha" />
+      <img src="pacoquinha.jpg" alt="pacoquinha" />
       <div class="info">
         <h3>pacoquinha</h3>
         <p>Quantidade: 40</p>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="produto-item">
-      <img src="freegells.png" alt="freegells" />
+      <img src="freegells.jpg" alt="freegells" />
       <div class="info">
         <h3>freegells</h3>
         <p>Quantidade: 20</p>
@@ -55,7 +55,7 @@
     </div>
 
     <div class="produto-item">
-      <img src="salgadinho.png" alt="salgadinho torcida" />
+      <img src="salgadinho_torcida.jpg" alt="salgadinho torcida" />
       <div class="info">
         <h3>salgadinho torcida</h3>
         <p>Quantidade: 8</p>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="produto-item">
-      <img src="biscoitos.png" alt="biscoitos" />
+      <img src="biscoitos.jpg" alt="biscoitos" />
       <div class="info">
         <h3>biscoitos</h3>
         <p>Quantidade: 15</p>
@@ -84,6 +84,7 @@
 
     <!-- QR Code e Chave PIX -->
     <div class="qrcode-container">
+      <!-- Ajuste para "qrcode.jpg" se o seu arquivo estiver nesse formato -->
       <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
     </div>
     <p id="chave-pix">SUA-CHAVE-PIX-ALEATÓRIA</p>
