--- a/index.html
+++ b/index.html
@@ -11,16 +11,9 @@
 </head>
 <body>
 
-  <!-- Cabeçalho com menu de navegação -->
+  <!-- Cabeçalho (sem menu) -->
   <header>
     <h1>Vendas da Faculdade</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
   </header>
 
   <!-- Container principal -->
@@ -29,7 +22,7 @@
     <h2>Catálogo de Produtos</h2>
 
     <!-- Lista de Produtos -->
-    <!-- Ajuste o "src" das imagens se o nome ou a pasta for diferente -->
+    <!-- Ajuste o "src" das imagens caso o nome ou a pasta seja diferente -->
     <div class="produto-item">
       <img src="pacoquinha.jpg" alt="pacoquinha" />
       <div class="info">
