--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
 <body>
 
-  <!-- Cabeçalho (sem menu) -->
-  <header>
-    <h1>Vendas da Faculdade</h1>
-  </header>
+  <!-- Removido o header com "Vendas da Faculdade" -->
 
   <!-- Container principal -->
   <div class="container">
@@ -22,7 +19,6 @@
     <h2>Catálogo de Produtos</h2>
 
     <!-- Lista de Produtos -->
-    <!-- Ajuste o "src" das imagens caso o nome ou a pasta seja diferente -->
     <div class="produto-item">
       <img src="pacoquinha.jpg" alt="pacoquinha" />
       <div class="info">
@@ -77,7 +73,6 @@
 
     <!-- QR Code e Chave PIX -->
     <div class="qrcode-container">
-      <!-- Ajuste para "qrcode.jpg" se o seu arquivo estiver nesse formato -->
       <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
     </div>
     <p id="chave-pix">SUA-CHAVE-PIX-ALEATÓRIA</p>
