--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <!-- Removido o header com "Vendas da Faculdade" -->
+  <!-- Removido o header com "Vendas da Faculdade" (como na versão anterior) -->
 
   <!-- Container principal -->
   <div class="container">
@@ -75,7 +75,10 @@
     <div class="qrcode-container">
       <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
     </div>
-    <p id="chave-pix">SUA-CHAVE-PIX-ALEATÓRIA</p>
+    <!-- Chave PIX alterada para a fornecida -->
+    <p id="chave-pix">4c5a1c62-0a1d-4761-ab63-668faa2adfe0</p>
+
+    <!-- Botão de copiar chave PIX -->
     <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
   </div>
   
