--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 <body>
 
-  <!-- Removido o header com "Vendas da Faculdade" (como na versão anterior) -->
-
-  <!-- Container principal -->
+  <!-- Container principal (sem o texto "Vendas da Faculdade" no topo) -->
   <div class="container">
     <!-- Título do Catálogo de Produtos -->
     <h2>Catálogo de Produtos</h2>
@@ -61,26 +59,4 @@
         <h3>biscoitos</h3>
         <p>Quantidade: 15</p>
       </div>
-      <div class="preco">
-        <span>R$ 3.00</span>
-        <button class="adicionar">Adicionar</button>
-      </div>
-    </div>
-
-    <!-- Seção de Pagamento -->
-    <h2>Pagamento</h2>
-    <p id="total-compra">Total: R$ 0.00</p>
-
-    <!-- QR Code e Chave PIX -->
-    <div class="qrcode-container">
-      <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
-    </div>
-    <!-- Chave PIX alterada para a fornecida -->
-    <p id="chave-pix">4c5a1c62-0a1d-4761-ab63-668faa2adfe0</p>
-
-    <!-- Botão de copiar chave PIX -->
-    <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
-  </div>
-  
-</body>
-</html>
+      <
