--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Vendas da Faculdade</title>
   <!-- Arquivo de estilos (styles.css) -->
   <link rel="stylesheet" href="styles.css" />
+  <script src="https://cdn.jsdelivr.net/gh/JuniorB2SS/pix@v2.2.0/dist/index.min.js"></script>
   <!-- Arquivo de script (script.js) -->
   <script src="script.js" defer></script>
 </head>
