--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vendas da Faculdade</title>
-  <!-- Seu CSS -->
-  <link rel="stylesheet" href="styles.css">
-  <!-- Biblioteca Pix para gerar o payload e o QR Code -->
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Biblioteca Pix (para gerar payload Pix e QR Code) -->
   <script src="https://cdn.jsdelivr.net/gh/JuniorB2SS/pix@v2.2.0/dist/index.min.js"></script>
-  <!-- Seu JavaScript -->
+  <!-- Script principal -->
   <script src="script.js" defer></script>
 </head>
 <body>
+
   <div class="container">
     <h2>Catálogo de Produtos</h2>
 
     <!-- Produto 1 -->
     <div class="produto-item">
-      <img src="pacoquinha.jpg" alt="pacoquinha">
+      <img src="pacoquinha.jpg" alt="pacoquinha" />
       <div class="info">
         <h3>pacoquinha</h3>
         <p>Quantidade: 40</p>
@@ -30,7 +31,7 @@
 
     <!-- Produto 2 -->
     <div class="produto-item">
-      <img src="freegells.jpg" alt="freegells">
+      <img src="freegells.jpg" alt="freegells" />
       <div class="info">
         <h3>freegells</h3>
         <p>Quantidade: 20</p>
@@ -43,7 +44,7 @@
 
     <!-- Produto 3 -->
     <div class="produto-item">
-      <img src="salgadinho_torcida.jpg" alt="salgadinho torcida">
+      <img src="salgadinho_torcida.jpg" alt="salgadinho torcida" />
       <div class="info">
         <h3>salgadinho torcida</h3>
         <p>Quantidade: 8</p>
@@ -56,7 +57,7 @@
 
     <!-- Produto 4 -->
     <div class="produto-item">
-      <img src="biscoitos.jpg" alt="biscoitos">
+      <img src="biscoitos.jpg" alt="biscoitos" />
       <div class="info">
         <h3>biscoitos</h3>
         <p>Quantidade: 15</p>
@@ -71,10 +72,15 @@
     <h2>Pagamento</h2>
     <p id="total-compra">Total: R$ 0.00</p>
 
-    <!-- Área do QR Code -->
+    <!-- QR Code Pix dinâmico -->
     <div class="qrcode-container">
-      <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX">
+      <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
     </div>
+
+    <!-- Chave Pix e botão para copiar -->
+    <p id="chave-pix">4c5a1c62-0a1d-4761-ab63-668faa2adfe0</p>
+    <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
   </div>
+
 </body>
 </html>
