--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vendas da Faculdade</title>
+  
+  <!-- Fonte Moderna (Roboto) -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
   <!-- CSS principal -->
   <link rel="stylesheet" href="styles.css" />
+  
   <!-- Script principal -->
   <script src="script.js" defer></script>
 </head>
@@ -69,7 +74,7 @@
     <h2>Pagamento</h2>
     <p id="total-compra">Total: R$ 0.00</p>
 
-    <!-- QR Code Estático (use o arquivo "qrcode.png") -->
+    <!-- QR Code Estático (use "qrcode.png" no mesmo local) -->
     <div class="qrcode-container">
       <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
     </div>
