--- a/index.html
+++ b/index.html
@@ -1,165 +1,34 @@
-/* Reset básico */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Catálogo de Produtos</title>
+  <!-- Link para o CSS -->
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  color: #333;
-}
+  <div class="container">
+    <h1>Catálogo de Produtos</h1>
+    
+    <!-- Lista de Produtos (grid) -->
+    <div id="product-list" class="grid-produtos">
+      <!-- Será preenchido dinamicamente pelo catalog.js -->
+    </div>
 
-/* Container principal */
-.container {
-  max-width: 1000px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-}
+    <!-- Total (apenas aparece após o 1º item ser adicionado) -->
+    <p id="total-compra">Total: R$ 0.00</p>
 
-/* Títulos */
-h1, h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
+    <!-- Botão para ver carrinho -->
+    <div style="text-align: center; margin-top: 20px;">
+      <a href="cart.html" style="text-decoration: none;">
+        <button>Ver Carrinho</button>
+      </a>
+    </div>
+  </div>
 
-/* Grade de Produtos no Catálogo */
-.grid-produtos {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-/* Card de Produto */
-.product-card {
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  padding: 15px;
-  text-align: center;
-  background-color: #fafafa;
-  transition: box-shadow 0.2s;
-}
-
-.product-card:hover {
-  box-shadow: 0 0 8px rgba(0,0,0,0.1);
-}
-
-/* Container da imagem (proporção quadrada) */
-.image-container {
-  position: relative;
-  width: 100%;
-  padding-top: 100%;
-  overflow: hidden;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
-
-.image-container img {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.product-card h3 {
-  margin-bottom: 8px;
-}
-
-.product-card p {
-  margin-bottom: 8px;
-  color: #666;
-}
-
-.price {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-/* Botão "Adicionar" */
-.adicionar {
-  background-color: #3498db;
-  color: #fff;
-  border: none;
-  padding: 8px 12px;
-  cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s, transform 0.2s;
-}
-
-.adicionar:hover {
-  background-color: #2980b9;
-  transform: scale(1.05);
-}
-
-/* Total no Catálogo (apenas aparece após 1º item) */
-#total-compra {
-  text-align: center;
-  font-weight: bold;
-  color: #e74c3c;
-  margin-top: 20px;
-  font-size: 1.2rem;
-  display: none; /* inicialmente oculto */
-}
-
-/* Carrinho (cart.html) */
-#cart-items {
-  margin-top: 20px;
-}
-
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #ddd;
-  padding: 10px 0;
-}
-
-.cart-item p {
-  margin: 0;
-}
-
-.cart-item span {
-  font-weight: bold;
-}
-
-/* QR Code e PIX */
-.qrcode-container {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-
-.qrcode-container img {
-  width: 160px;
-  height: 160px;
-  object-fit: contain;
-}
-
-/* Botões gerais */
-button {
-  background-color: #2ecc71;
-  color: #fff;
-  border: none;
-  padding: 8px 12px;
-  cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s, transform 0.2s;
-}
-
-button:hover {
-  background-color: #27ae60;
-  transform: scale(1.05);
-}
-
-/* Caixa de pontos (cart.html) */
-#points-info {
-  text-align: center;
-  margin-top: 10px;
-  font-weight: bold;
-  color: #9b59b6;
-}
+  <!-- Script do Catálogo -->
+  <script src="catalog.js"></script>
+</body>
+</html>
