--- a/cart.html
+++ b/cart.html
@@ -24,8 +24,11 @@
     <div class="qrcode-container">
       <img id="qrcode-pix" src="qrcode.png" alt="QR Code do PIX" />
     </div>
-    <p id="chave-pix">4c5a1c62-0a1d-4761-ab63-668faa2adfe0</p>
-    <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
+
+    <div class="pix-container">
+      <p id="chave-pix">4c5a1c62-0a1d-4761-ab63-668faa2adfe0</p>
+      <button onclick="copiarChavePIX()">📋 Copiar Chave PIX</button>
+    </div>
 
     <!-- Botão para voltar ao catálogo -->
     <div style="text-align: center; margin-top: 20px;">
@@ -38,4 +41,3 @@
   <script src="cart.js"></script>
 </body>
 </html>
-
